[package]
name = "mlua-derive-unofficial"
version = "0.1.0"
authors = [
   "Patrick Barrett <patrick.barrett@smartthings.com>",
    "Jon Magnuson <jon.magnuson@smartthings.com>",
]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = [ "extra-traits" ] }
quote = "1"
mlua = { version = "0.6", features = [ "lua53" ] }
Inflector = "0.11"
